# ZenAuro_Axum_Template

./: .env  .gitignore  Cargo.toml  README.md  perf.data  perf.data.old  rustfmt.toml
src/: config.rs  errors.rs  lib.rs  main.rs  router.rs  state.rs  utils.rs
src/handler/: auth_handler.rs
src/router/: auth_router.rs  user_info_router.rs
src/utils/: claims.rs  jwt.rs
