[package]
name = "axum_p1"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
deadpool-redis = "0.21.1"
dotenv = "0.15.0"
redis ={ version="0.32.2",features = ["tokio-comp","connection-manager"]}  
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
