[package]
name = "axum_p1"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["macros"] }
chrono = "0.4.41"
deadpool-redis = "0.21.1"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
redis ={ version="0.32.2",features = ["tokio-comp","connection-manager"]}  
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.17.0"
[profile.release]
debug = true